# disorder

./: .github_CI.sh  .gitignore  CITATION.cff  CMakeLists.txt  Makefile  Makefile.inc  README.md  TODO  configure
.github/workflows/: cmake-single-platform.yml
analysis/: analysis.f  caesar.f  cut_Ecur.f  discambridge_analysis.f  exclusive_lab_frame_analysis.f  fastjetfortran.cc  inclusive_paper_analysis.f  jets_in_the_lab_frame.f  jets_lab_frame.f  nnlojet.f  pwhg_bookhist-multi.f  pwhg_bookhist-multi.h  sigmaR.f  simple_analysis.f  vbf.f
analysis/DISCambridgePlugin/: DISCambridgePlugin.cc  DISCambridgePlugin.hh
aux/: getpdfuncert.f  mergedata.f  mergegrids.f  multirun.pl  runpar.sh
cambridge-vs-centauro/: cambridge-yord-lo.top  cambridge-yord-nlo.top  cambridge-zord-lo-kT2-10.top  cambridge-zord-lo.top  cambridge-zord-nlo-kT2-10.top  cambridge-zord-nlo-kT2-100.top  cambridge-zord-nlo.top  centauro-yord-lo.top  centauro-yord-nlo.top  centauro-zord-lo.top  centauro-zord-nlo-HS.top  centauro-zord-nlo.top
docs/: SciPost.cls  SciPost_better_arXiv.cls  SciPost_bibstyle_better_arXiv.bst  bibliography.bib  disorder-1.0.0-manual.tex
panscales_sliceNLO_runs/: lo.top  nlocoeff.top
panscales_sliceNLO_runs/CC-antineutrino/: run-pheno.sh  run.sh
panscales_sliceNLO_runs/NC-positron/: run-pheno.sh  run.sh
paper_runs/inclusive_runs/: run.sh
paper_runs/inclusive_runs/plot/: plots-ratio.gp
paper_runs/lab_frame/: plots.gp  run.sh
paper_runs/nnlojet/: plots.gp
src/: disent-lib.f  disorder.f90  integration.f  io_utils.f90  libdisent.f  matrix_element.f90  mod_analysis.f90  mod_dsigma.f90  mod_matrix_element.f90  mod_parameters.f90  mod_phase_space.f90  parameters.f90  phase_space.f  structure_functions_gluon_only.f90  toy_pdfs.f90
validation/: quick_validation.sh  validate_or_generate.sh
validation/ref_runs/: inclusive_cc_Q_10_grids-n3lo-0001.top  inclusive_cc_Qmin_1_x_0.01_grids-n3lo-0001.top  inclusive_nc_Q_10_grids-n3lo-0001.top  inclusive_nc_Qmin_1_x_0.01_grids-n3lo-0001.top  inclusive_nc_includeZ_Q_10_grids-n3lo-0001.top  inclusive_nc_includeZ_Qmin_1_x_0.01_grids-n3lo-0001.top
